todopub/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: todo-pub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pod
      labels: 
        app: client 
    spec: 
      containers:
        - name: client 
          image: dekcode/todo-app:v4
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: todo-pub
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
