todopub/server-deploymeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: todo-pub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      name: server-pod
      labels: 
        app: server 
    spec: 
      containers:
        - name: server
          image: dekcode/todo-api:v5
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: todo-pub
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
  - port: 80
    targetPort: 80
