todopub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: todo-pub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: todo.pub.com
    http:
      paths:
      - pathType: Prefix
        path: /api/
        backend:
          service:
            name: server-service
            port: 
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: client-service
            port: 
              number: 80
      - pathType: Prefix
        path: /config
        backend:
          service:
            name: todo-config
            port: 
              number: 80
